# scarb

./: Cargo.toml
extensions/scarb-cairo-run/: Cargo.toml
extensions/scarb-cairo-test/: Cargo.toml
scarb/: Cargo.toml
scarb-metadata/: Cargo.toml
scarb-metadata/src/: lib.rs
scarb/src/compiler/: db.rs
scarb/src/core/: workspace.rs
scarb/src/core/registry/client/: cache.rs  http.rs  local.rs  mod.rs
scarb/src/ops/: metadata.rs  package.rs
scarb/src/sources/: registry.rs
scarb/src/sources/git/: client.rs  mod.rs
scarb/tests/: build.rs  local_registry.rs  metadata.rs  package.rs
website/docs/extensions/: testing.md
website/docs/reference/: targets.md
