[package]
name = "scarb-cairo-test"
version.workspace = true
edition.workspace = true
publish = false

authors.workspace = true

[dependencies]
anyhow.workspace = true
cairo-lang-compiler = { git = "https://github.com/starkware-libs/cairo", rev = "0f77760" }
cairo-lang-filesystem = { git = "https://github.com/starkware-libs/cairo", rev = "0f77760" }
cairo-lang-starknet = { git = "https://github.com/starkware-libs/cairo", rev = "0f77760" }
cairo-lang-test-runner = { git = "https://github.com/starkware-libs/cairo", rev = "0f77760" }
clap.workspace = true
scarb-metadata = { path = "../../scarb-metadata", features = ["packages_filter"] }
serde_json.workspace = true

[dev-dependencies]
snapbox.workspace = true
test-for-each-example = { path = "../../utils/test-for-each-example" }
